[project]
name = "quartz-council"
version = "0.1.0"
description = "Opt-in AI pull request reviewer with multi-agent review council"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pygithub>=2.8.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quartzcouncil"]
